--- a/src/index.html
+++ b/src/index.html
@@ -219,7 +219,7 @@
                             <span class="uk-text-average">в путешествие</span>
                         </h1>
                         <div class="uk-margin-xlarge-bottom">
-                            <a href="#search-section" class="uk-button uk-button-large uk-button-blue">Начать поиск</a>
+                            <a href="#search-section" class="uk-button uk-button-large uk-button-blue js-search-start">Начать поиск</a>
                         </div>
                         <ul class="tm-social uk-iconnav uk-flex-center uk-flex-middle uk-margin-medium-bottom">
                             <li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
