white buttons serach icon size fix

--- a/src/blogs.html
+++ b/src/blogs.html
@@ -264,7 +264,7 @@
                                         <form action="/" class="uk-search">
                                             <div class="uk-flex">
                                                 <input class="uk-input" type="search" placeholder="Поиск по блогам">
-                                                <a href="#" class="uk-button uk-button-blue">
+                                                <a href="#" class="uk-button uk-button-small uk-button-blue">
                                                     <i class="fa fa-search" aria-hidden="true"></i>
                                                 </a>
                                             </div>
@@ -317,7 +317,7 @@
                                                         <div class="uk-width-1-1">
                                                             <div class="tm-article-footer">
                                                                 <div class="uk-text-center">
-                                                                    <a href="#" class="tm-button-more uk-button uk-button-small uk-button-white">
+                                                                    <a href="#" class="tm-button-more uk-button uk-button-small uk-button-white uk-text-untransformed uk-text-default">
                                                                         Читать полностью
                                                                         <i class="fa fa-angle-double-down" aria-hidden="true"></i>
                                                                     </a>
@@ -411,7 +411,7 @@
                                                         <div class="uk-width-1-1">
                                                             <div class="tm-article-footer">
                                                                 <div class="uk-text-center">
-                                                                    <a href="#" class="tm-button-more uk-button uk-button-small uk-button-white">
+                                                                    <a href="#" class="tm-button-more uk-button uk-button-small uk-button-white uk-text-untransformed uk-text-default">
                                                                         Читать полностью
                                                                         <i class="fa fa-angle-double-down" aria-hidden="true"></i>
                                                                     </a>
@@ -505,7 +505,7 @@
                                                         <div class="uk-width-1-1">
                                                             <div class="tm-article-footer">
                                                                 <div class="uk-text-center">
-                                                                    <a href="#" class="tm-button-more uk-button uk-button-small uk-button-white">
+                                                                    <a href="#" class="tm-button-more uk-button uk-button-small uk-button-white uk-text-untransformed uk-text-default">
                                                                         Читать полностью
                                                                         <i class="fa fa-angle-double-down" aria-hidden="true"></i>
                                                                     </a>
@@ -599,7 +599,7 @@
                                                         <div class="uk-width-1-1">
                                                             <div class="tm-article-footer">
                                                                 <div class="uk-text-center">
-                                                                    <a href="#" class="tm-button-more uk-button uk-button-small uk-button-white">
+                                                                    <a href="#" class="tm-button-more uk-button uk-button-small uk-button-white uk-text-untransformed uk-text-default">
                                                                         Читать полностью
                                                                         <i class="fa fa-angle-double-down" aria-hidden="true"></i>
                                                                     </a>
@@ -693,7 +693,7 @@
                                                         <div class="uk-width-1-1">
                                                             <div class="tm-article-footer">
                                                                 <div class="uk-text-center">
-                                                                    <a href="#" class="tm-button-more uk-button uk-button-small uk-button-white">
+                                                                    <a href="#" class="tm-button-more uk-button uk-button-small uk-button-white uk-text-untransformed uk-text-default">
                                                                         Читать полностью
                                                                         <i class="fa fa-angle-double-down" aria-hidden="true"></i>
                                                                     </a>
@@ -722,7 +722,7 @@
 
                                                                     <div>
                                                                         <div class="social-likes-wrapper"
-                                                                             data-url="http://shared-url-example.com/">
+                                                                             data-url="http://shareuk-button uk-button-blued-url-example.com/">
                                                                             <div data-service="facebook" title="Share link on Facebook"></div>
                                                                             <div data-service="vkontakte" title="Share link on Vkontakte"></div>
                                                                             <div data-service="odnoklassniki" title="Share link on Odnoklassniki"></div>
