--- a/src/registration.html
+++ b/src/registration.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tourweek | Попутчики</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900|Roboto+Condensed&amp;subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700&amp;subset=cyrillic" rel="stylesheet">
 </head>
 <body>
 
@@ -232,7 +232,7 @@
                                     <div class="uk-width-1-3@s uk-width-1-2@l">
                                         <label class="uk-form-label" for="form-input-login">Логин*:</label>
                                         <div class="uk-text-little uk-text-muted">
-                                            <i>Логин используется для авторизации; от 3 до 15 символов - цифры и/или английские буквы.</i>
+                                            <em>Логин используется для авторизации; от 3 до 15 символов - цифры и/или английские буквы.</em>
                                         </div>
                                     </div>
                                     <div>
@@ -246,7 +246,7 @@
                                     <div class="uk-width-1-3@s uk-width-1-2@l">
                                         <label class="uk-form-label" for="form-input-email">Адрес e-mail*:</label>
                                         <div class="uk-text-little uk-text-muted">
-                                            <i>Укажите реальный и действующий e-mail адрес.</i>
+                                            <em>Укажите реальный и действующий e-mail адрес.</em>
                                         </div>
                                     </div>
                                     <div>
@@ -269,7 +269,7 @@
                                     <div class="uk-width-1-3@s uk-width-1-2@l">
                                         <label class="uk-form-label" for="form-input-password">Пароль*:</label>
                                         <div class="uk-text-little uk-text-muted">
-                                            <i>Задайте пароль от 6 до 12 символов, используя цифры (0-9) или английские буквы (a-z). Например: 1234as</i>
+                                            <em>Задайте пароль от 6 до 12 символов, используя цифры (0-9) или английские буквы (a-z). Например: 1234as</em>
                                         </div>
                                     </div>
                                     <div>
@@ -306,7 +306,7 @@
                                     <div class="uk-width-1-3@s uk-width-1-2@l">
                                         <label class="uk-form-label" for="form-input-username">Имя*:</label>
                                         <div class="uk-text-little uk-text-muted">
-                                            <i>Укажите ваше настоящее имя, до 22 символов.</i>
+                                            <em>Укажите ваше настоящее имя, до 22 символов.</em>
                                         </div>
                                     </div>
                                     <div>
@@ -490,7 +490,7 @@
                                     <div class="uk-width-1-3@s uk-width-1-2@l">
                                         <label class="uk-form-label" for="form-input-captcha">Защита от автоматической регистрации</label>
                                         <div class="uk-text-little uk-text-muted">
-                                            <i>Введите символы, изображенные на картинке *:</i>
+                                            <em>Введите символы, изображенные на картинке *:</em>
                                         </div>
                                     </div>
                                     <div>
