--- a/src/blogs.html
+++ b/src/blogs.html
@@ -243,33 +243,40 @@
 
                             <!-- Filter -->
                             <div uk-filter="target: .js-filter-blogs">
+                                <hr class="uk-margin-remove">
+                                <div class="uk-padding-small uk-padding-remove-vertical uk-background-muted">
+                                    <div class="uk-child-width-expand@l uk-flex-middle" uk-grid>
+                                        <div>
 
-                                <div class="uk-child-width-expand@l uk-flex-middle" uk-grid>
-                                    <div>
+                                            <!-- Filter controls -->
+                                            <ul uk-tab>
+                                                <li class="uk-active" uk-filter-control="[data-tags*='last']"><a
+                                                        href="#">Последние сообщения</a></li>
+                                                <li uk-filter-control="[data-tags*='themes']"><a href="#">По темам</a>
+                                                </li>
+                                                <li uk-filter-control="[data-tags*='countries']"><a href="#">По
+                                                    странам</a></li>
+                                                <li uk-filter-control="[data-tags*='popular']"><a
+                                                        href="#">Популярные</a></li>
+                                                <li uk-filter-control="[data-tags*='discussed']"><a
+                                                        href="#">Обсуждаемые</a></li>
+                                            </ul>
 
-                                        <!-- Filter controls -->
-                                        <ul uk-tab>
-                                            <li class="uk-active" uk-filter-control="[data-tags*='last']"><a href="#">Последние сообщения</a></li>
-                                            <li uk-filter-control="[data-tags*='themes']"><a href="#">По темам</a></li>
-                                            <li uk-filter-control="[data-tags*='countries']"><a href="#">По странам</a></li>
-                                            <li uk-filter-control="[data-tags*='popular']"><a href="#">Популярные</a></li>
-                                            <li uk-filter-control="[data-tags*='discussed']"><a href="#">Обсуждаемые</a></li>
-                                        </ul>
+                                        </div>
 
-                                    </div>
+                                        <div class="uk-width-auto@l">
 
-                                    <div class="uk-width-auto@l">
+                                            <!-- Search form -->
+                                            <form action="/" class="uk-search">
+                                                <div class="uk-flex">
+                                                    <input class="uk-input" type="search" placeholder="Поиск по блогам">
+                                                    <a href="#" class="uk-button uk-button-small uk-button-blue">
+                                                        <i class="fa fa-search" aria-hidden="true"></i>
+                                                    </a>
+                                                </div>
+                                            </form>
 
-                                        <!-- Search form -->
-                                        <form action="/" class="uk-search">
-                                            <div class="uk-flex">
-                                                <input class="uk-input" type="search" placeholder="Поиск по блогам">
-                                                <a href="#" class="uk-button uk-button-small uk-button-blue">
-                                                    <i class="fa fa-search" aria-hidden="true"></i>
-                                                </a>
-                                            </div>
-                                        </form>
-
+                                        </div>
                                     </div>
                                 </div>
 
@@ -277,11 +284,9 @@
                                 <ul class="tm-articles-list js-filter-blogs uk-list" uk-margin="margin: uk-margin-top">
                                     <li data-tags="last countries popular discussed">
                                         <article class="uk-article">
-                                            <div class="uk-child-width-expand@s uk-grid-collapse" uk-grid>
+                                            <div class="uk-child-width-expand@s" uk-grid>
                                                 <div class="uk-width-auto@s">
-                                                    <div class="uk-padding uk-padding-remove-top">
-                                                        <img src="images/avatar_50x50_1.png" alt="" class="uk-border-circle">
-                                                    </div>
+                                                    <img src="images/avatar_50x50_1.png" alt="" class="uk-border-circle">
                                                 </div>
 
                                                 <div>
@@ -371,11 +376,9 @@
 
                                     <li data-tags="last countries popular">
                                         <article class="uk-article">
-                                            <div class="uk-child-width-expand@s uk-grid-collapse" uk-grid>
+                                            <div class="uk-child-width-expand@s" uk-grid>
                                                 <div class="uk-width-auto">
-                                                    <div class="uk-padding uk-padding-remove-top">
-                                                        <img src="images/avatar_50x50_2.png" alt="" class="uk-border-circle">
-                                                    </div>
+                                                    <img src="images/avatar_50x50_2.png" alt="" class="uk-border-circle">
                                                 </div>
 
                                                 <div>
@@ -465,11 +468,9 @@
 
                                     <li data-tags="last themes countries discussed">
                                         <article class="uk-article">
-                                            <div class="uk-child-width-expand@s uk-grid-collapse" uk-grid>
+                                            <div class="uk-child-width-expand@s" uk-grid>
                                                 <div class="uk-width-auto">
-                                                    <div class="uk-padding uk-padding-remove-top">
-                                                        <img src="images/avatar_50x50_3.png" alt="" class="uk-border-circle">
-                                                    </div>
+                                                    <img src="images/avatar_50x50_3.png" alt="" class="uk-border-circle">
                                                 </div>
 
                                                 <div>
@@ -559,11 +560,9 @@
 
                                     <li data-tags="last themes popular">
                                         <article class="uk-article">
-                                            <div class="uk-child-width-expand@s uk-grid-collapse" uk-grid>
+                                            <div class="uk-child-width-expand@s" uk-grid>
                                                 <div class="uk-width-auto">
-                                                    <div class="uk-padding uk-padding-remove-top">
-                                                        <img src="images/avatar_50x50_4.png" alt="" class="uk-border-circle">
-                                                    </div>
+                                                    <img src="images/avatar_50x50_4.png" alt="" class="uk-border-circle">
                                                 </div>
 
                                                 <div>
@@ -653,11 +652,9 @@
 
                                     <li data-tags="last countries popular discussed">
                                         <article class="uk-article">
-                                            <div class="uk-child-width-expand@s uk-grid-collapse" uk-grid>
+                                            <div class="uk-child-width-expand@s" uk-grid>
                                                 <div class="uk-width-auto">
-                                                    <div class="uk-padding uk-padding-remove-top">
-                                                        <img src="images/avatar_50x50_5.png" alt="" class="uk-border-circle">
-                                                    </div>
+                                                    <img src="images/avatar_50x50_5.png" alt="" class="uk-border-circle">
                                                 </div>
 
                                                 <div>
