--- a/src/visas.html
+++ b/src/visas.html
@@ -217,7 +217,7 @@
                     <div class="uk-container uk-text-center">
                         <h1>Визы</h1>
                         <div class="uk-width-3-4@l uk-margin-auto uk-margin-xlarge-bottom">
-                            <form action="/">
+                            <form action="/" class="tm-form-pageheader">
                                 <div class="uk-margin">
                                     <div class="uk-form-controls uk-inline uk-width-1-1">
                                         <span class="uk-form-icon">
