--- a/src/companions.html
+++ b/src/companions.html
@@ -527,7 +527,7 @@
 
                                                         <div class="uk-flex uk-flex-middle uk-flex-between">
                                                             <a href="#tm-toggle-text-1" class="uk-text-bold" uk-toggle>
-                                                                <span opened-toggle>Развернуть</span><span closed-toggle hidden>Свернуть</span> <i class="fa fa-angle-double-up" aria-hidden="true"></i>
+                                                                <span opened-toggle>Свернуть</span><span closed-toggle>Развернуть</span> <i class="fa fa-angle-double-up" aria-hidden="true"></i>
                                                             </a>
                                                             <a href="#" class="uk-button uk-button-small uk-button-blue uk-text-uppercase">Ответить</a>
                                                         </div>
@@ -620,7 +620,7 @@
 
                                                         <div class="uk-flex uk-flex-middle uk-flex-between">
                                                             <a href="#tm-toggle-text-2" class="uk-text-bold" uk-toggle>
-                                                                <span opened-toggle>Развернуть</span><span closed-toggle hidden>Свернуть</span> <i class="fa fa-angle-double-up" aria-hidden="true"></i>
+                                                                <span opened-toggle>Свернуть</span><span closed-toggle>Развернуть</span> <i class="fa fa-angle-double-up" aria-hidden="true"></i>
                                                             </a>
                                                             <a href="#" class="uk-button uk-button-small uk-button-blue uk-text-uppercase">Ответить</a>
                                                         </div>
@@ -713,7 +713,7 @@
 
                                                         <div class="uk-flex uk-flex-middle uk-flex-between">
                                                             <a href="#tm-toggle-text-3" class="uk-text-bold" uk-toggle>
-                                                                <span opened-toggle>Развернуть</span><span closed-toggle hidden>Свернуть</span> <i class="fa fa-angle-double-up" aria-hidden="true"></i>
+                                                                <span opened-toggle>Свернуть</span><span closed-toggle>Развернуть</span> <i class="fa fa-angle-double-up" aria-hidden="true"></i>
                                                             </a>
                                                             <a href="#" class="uk-button uk-button-small uk-button-blue uk-text-uppercase">Ответить</a>
                                                         </div>
@@ -806,7 +806,7 @@
 
                                                         <div class="uk-flex uk-flex-middle uk-flex-between">
                                                             <a href="#tm-toggle-text-4" class="uk-text-bold" uk-toggle>
-                                                                <span opened-toggle>Развернуть</span><span closed-toggle hidden>Свернуть</span> <i class="fa fa-angle-double-up" aria-hidden="true"></i>
+                                                                <span opened-toggle>Свернуть</span><span closed-toggle>Развернуть</span> <i class="fa fa-angle-double-up" aria-hidden="true"></i>
                                                             </a>
                                                             <a href="#" class="uk-button uk-button-small uk-button-blue uk-text-uppercase">Ответить</a>
                                                         </div>
@@ -900,7 +900,7 @@
 
                                                         <div class="uk-flex uk-flex-middle uk-flex-between">
                                                             <a href="#tm-toggle-text-5" class="uk-text-bold" uk-toggle>
-                                                                <span opened-toggle>Развернуть</span><span closed-toggle hidden>Свернуть</span> <i class="fa fa-angle-double-up" aria-hidden="true"></i>
+                                                                <span opened-toggle>Свернуть</span><span closed-toggle>Развернуть</span> <i class="fa fa-angle-double-up" aria-hidden="true"></i>
                                                             </a>
                                                             <a href="#" class="uk-button uk-button-small uk-button-blue uk-text-uppercase">Ответить</a>
                                                         </div>
@@ -995,7 +995,7 @@
 
                                                         <div class="uk-flex uk-flex-middle uk-flex-between">
                                                             <a href="#tm-toggle-text-6" class="uk-text-bold" uk-toggle>
-                                                                <span opened-toggle>Развернуть</span><span closed-toggle hidden>Свернуть</span> <i class="fa fa-angle-double-up" aria-hidden="true"></i>
+                                                                <span opened-toggle>Свернуть</span><span closed-toggle>Развернуть</span> <i class="fa fa-angle-double-up" aria-hidden="true"></i>
                                                             </a>
                                                             <a href="#" class="uk-button uk-button-small uk-button-blue uk-text-uppercase">Ответить</a>
                                                         </div>
@@ -1090,7 +1090,7 @@
 
                                                         <div class="uk-flex uk-flex-middle uk-flex-between">
                                                             <a href="#tm-toggle-text-7" class="uk-text-bold" uk-toggle>
-                                                                <span opened-toggle>Развернуть</span><span closed-toggle hidden>Свернуть</span> <i class="fa fa-angle-double-up" aria-hidden="true"></i>
+                                                                <span opened-toggle>Свернуть</span><span closed-toggle>Развернуть</span> <i class="fa fa-angle-double-up" aria-hidden="true"></i>
                                                             </a>
                                                             <a href="#" class="uk-button uk-button-small uk-button-blue uk-text-uppercase">Ответить</a>
                                                         </div>
