--- a/src/visa-text.html
+++ b/src/visa-text.html
@@ -228,8 +228,9 @@
                             <div>
                                 <h2>Виза во Францию для россиян — список документов, цены, как и где оформлять?</h2>
 
-                                <div class="tm-marker-world uk-alert-primary uk-text-medium" uk-alert>
-                                    <p>Гражданам России для въезда во Францию требуется виза.</p>
+                                <div class="uk-alert-primary uk-flex uk-flex-middle uk-text-medium" uk-alert>
+                                    <img src="images/icon-world.png" alt="" class="uk-margin-right">
+                                    <div>Гражданам России для въезда во Францию требуется виза.</div>
                                 </div>
 
                                 <p>Франция входит в состав стран – участниц Шенгенского соглашения. Поэтому лица,
@@ -248,7 +249,7 @@
                                                                      target="_blank">www.ambafrance-ru.org</a></li>
                                 </ul>
 
-                                <div class="uk-tile uk-tile-primary uk-padding-small uk-padding-remove-vertical uk-display-inline-block">
+                                <div class="uk-tile uk-tile-primary uk-display-inline-block">
                                     <h4 class="uk-text-uppercase">Краткосрочная шенгенская виза категории С</h4>
                                 </div>
 
@@ -392,10 +393,11 @@
                                                     </li>
                                                 </ul>
 
-                                                <div class="tm-marker-info uk-alert-danger uk-text-medium" uk-alert>
-                                                    <p>Наличные деньги, кредитные карты и их копии, чеки из банкоматов,
+                                                <div class="uk-alert-danger uk-flex uk-flex-middle uk-text-medium" uk-alert>
+                                                    <img src="images/icon-info.png" alt="" class="uk-margin-right">
+                                                    <div>Наличные деньги, кредитные карты и их копии, чеки из банкоматов,
                                                         справки об обмене валюты и дорожные чеки не принимаются.
-                                                    </p>
+                                                    </div>
                                                 </div>
                                             </li>
                                         </ul>
@@ -435,8 +437,9 @@
                                     города, дата с которой ведется предпринимательская деятельность, заработная плата
                                 </p>
 
-                                <div class="tm-marker-clock uk-alert-primary uk-text-medium" uk-alert>
-                                    <p>Срок и стоимость оформления визы: <b>20-30 дней</b></p>
+                                <div class="uk-alert-primary uk-flex uk-flex-middle uk-text-medium" uk-alert>
+                                    <img src="images/icon-world.png" alt="" class="uk-margin-right">
+                                    <div>Срок и стоимость оформления визы: <b>20-30 дней</b></div>
                                 </div>
 
                                 <div class="tm-marked tm-marked-orange uk-padding uk-background-default uk-box-shadow-small uk-text-little">
