text, lists , markers styles

--- a/src/visa-text.html
+++ b/src/visa-text.html
@@ -322,7 +322,7 @@
 
                                         <div class="uk-flex-middle" uk-grid>
                                             <div>
-                                                <div class="tm-marker-file uk-panel uk-text-bold">
+                                                <div class="tm-marker-file uk-text-bold">
                                                     Анкета на визу во Францию (англ)
                                                 </div>
                                             </div>
@@ -333,7 +333,7 @@
 
                                         <div class="uk-flex-middle" uk-grid>
                                             <div>
-                                                <div class="tm-marker-file uk-panel uk-text-bold">
+                                                <div class="tm-marker-file uk-text-bold">
                                                     Анкета на визу во Францию (фр)
                                                 </div>
                                             </div>
@@ -411,57 +411,65 @@
                                     </li>
                                 </ol>
 
-                                <h4 class="tm-marked tm-marked-blue">Индивидуальным предпринимателям</h4>
-                                <ul class="tm-list-arrow uk-list">
-                                    <li>Справку с места работы</li>
-                                    <li>Справка подписывается самим предпринимателем или главным бухгалтером;</li>
-                                    <li>Справка заверяется печатью индивидуального предпринимателя (при наличии
-                                        печати);
-                                    </li>
-                                </ul>
-                                <p>В справке отображается информация: о дате выдачи справки, адрес, на который
-                                    регистрировалась предпринимательская деятельность, рабочий телефон с указанием кода
-                                    города, дата с которой ведется предпринимательская деятельность, заработная плата
-                                </p>
+                                <div class="tm-marked">
+                                    <h4 class="tm-marked-title">Индивидуальным предпринимателям</h4>
+                                    <ul class="tm-list-arrow uk-list">
+                                        <li>Справку с места работы</li>
+                                        <li>Справка подписывается самим предпринимателем или главным бухгалтером;</li>
+                                        <li>Справка заверяется печатью индивидуального предпринимателя (при наличии
+                                            печати);
+                                        </li>
+                                    </ul>
+                                    <p>В справке отображается информация: о дате выдачи справки, адрес, на который
+                                        регистрировалась предпринимательская деятельность, рабочий телефон с указанием кода
+                                        города, дата с которой ведется предпринимательская деятельность, заработная плата
+                                    </p>
+                                </div>
 
-                                <h4 class="tm-marked tm-marked-blue">Пенсионерам</h4>
-                                <ul class="tm-list-arrow uk-list">
-                                    <li>Справку с места работы</li>
-                                    <li>Справка подписывается самим предпринимателем или главным бухгалтером;</li>
-                                    <li>Справка заверяется печатью индивидуального предпринимателя (при наличии
-                                        печати);
-                                    </li>
-                                </ul>
-                                <p>В справке отображается информация: о дате выдачи справки, адрес, на который
-                                    регистрировалась предпринимательская деятельность, рабочий телефон с указанием кода
-                                    города, дата с которой ведется предпринимательская деятельность, заработная плата
-                                </p>
+                                <div class="tm-marked">
+                                    <h4 class="tm-marked-title">Пенсионерам</h4>
+                                    <ul class="tm-list-arrow uk-list">
+                                        <li>Справку с места работы</li>
+                                        <li>Справка подписывается самим предпринимателем или главным бухгалтером;</li>
+                                        <li>Справка заверяется печатью индивидуального предпринимателя (при наличии
+                                            печати);
+                                        </li>
+                                    </ul>
+                                    <p>В справке отображается информация: о дате выдачи справки, адрес, на который
+                                        регистрировалась предпринимательская деятельность, рабочий телефон с указанием кода
+                                        города, дата с которой ведется предпринимательская деятельность, заработная плата
+                                    </p>
+                                </div>
 
-                                <div class="uk-alert-primary uk-flex uk-flex-middle uk-text-medium" uk-alert>
+                                <div class="uk-alert-primary uk-flex uk-flex-middle uk-text-medium uk-margin-medium-bottom" uk-alert>
                                     <img src="images/icon-world.png" alt="" class="uk-margin-right">
                                     <div>Срок и стоимость оформления визы: <b>20-30 дней</b></div>
                                 </div>
 
-                                <div class="tm-marked tm-marked-orange uk-padding uk-background-default uk-box-shadow-small uk-text-little">
+                                <div class="tm-marked tm-marked-orange uk-padding uk-background-default uk-box-shadow-medium uk-text-little">
                                     <h4>Адрес, по которому высылаются пакеты документов на долгосрочную визу:</h4>
-                                    <div class="uk-flex">
-                                        <i class="fa fa-map-marker uk-margin-small-right" aria-hidden="true"></i>
-                                        <div>Director of Immigration, Ministry of Commerce, Industries, Labour and
-                                            Immigration, P. O. Box G26,
-                                        </div>
-                                    </div>
-                                    <div class="uk-flex">
-                                        <i class="fa fa-map-marker uk-margin-small-right" aria-hidden="true"></i>
-                                        <div>Honiara, Solomon Islands.</div>
-                                    </div>
-                                    <div class="uk-flex">
-                                        <i class="fa fa-phone uk-margin-small-right" aria-hidden="true"></i>
-                                        <div>Телефоны: +677-228-56, +677-250-81, +677-250-82, +677-250-83.</div>
-                                    </div>
-                                    <div class="uk-flex">
-                                        <i class="fa fa-globe uk-margin-small-right" aria-hidden="true"></i>
-                                        <div>Сайт - commerce.gov.sb</div>
-                                    </div>
+                                    <ul class="uk-list uk-margin-remove-bottom">
+                                        <li class="uk-flex">
+                                            <i class="fa fa-map-marker uk-margin-small-right" aria-hidden="true"></i>
+                                            <div>Director of Immigration, Ministry of Commerce, Industries, Labour and
+                                                Immigration, <br>
+                                                P. O. Box G26,
+                                            </div>
+                                        </li>
+                                        <li class="uk-flex">
+                                            <i class="fa fa-map-marker uk-margin-small-right" aria-hidden="true"></i>
+                                            <div>Honiara, Solomon Islands.</div>
+                                        </li>
+                                        <li class="uk-flex">
+                                            <i class="fa fa-phone uk-margin-small-right" aria-hidden="true"></i>
+                                            <div>Телефоны: +677-228-56, +677-250-81, +677-250-82, +677-250-83.</div>
+                                        </li>
+                                        <li class="uk-flex">
+                                            <i class="fa fa-globe uk-margin-small-right" aria-hidden="true"></i>
+                                            <div>Сайт - commerce.gov.sb</div>
+                                        </li>
+                                    </ul>
+
                                 </div>
 
                             </div>
