--- a/src/blogs.html
+++ b/src/blogs.html
@@ -267,7 +267,7 @@
                                         <div class="uk-width-auto@l">
 
                                             <!-- Search form -->
-                                            <form action="/" class="uk-search">
+                                            <form action="/" class="uk-search uk-padding-small uk-padding-remove-horizontal">
                                                 <div class="uk-flex">
                                                     <input class="uk-input" type="search" placeholder="Поиск по блогам">
                                                     <a href="#" class="uk-button uk-button-small uk-button-blue">
@@ -374,7 +374,7 @@
                                         </article>
                                     </li>
 
-                                    <li data-tags="last countries popular">
+                                    <li data-tags="last themes countries popular discussed">
                                         <article class="uk-article">
                                             <div class="uk-child-width-expand@s" uk-grid>
                                                 <div class="uk-width-auto">
@@ -466,7 +466,7 @@
                                         </article>
                                     </li>
 
-                                    <li data-tags="last themes countries discussed">
+                                    <li data-tags="last countries popular">
                                         <article class="uk-article">
                                             <div class="uk-child-width-expand@s" uk-grid>
                                                 <div class="uk-width-auto">
