--- a/src/index.html
+++ b/src/index.html
@@ -213,7 +213,11 @@
                                     </a>
                                     <div class="uk-background-default uk-dark" uk-drop="mode: click;">
                                         <button class="uk-drop-close" type="button" uk-close></button>
-                                        <h3 class="uk-text-black">Авторизация на сайте</h3>
+                                        <div class=""></div>
+                                        <h3 class="uk-text-black uk-text-center">Авторизация на сайте</h3>
+                                        <p class="uk-text-center">Если вы уже зарегистрированы, пожалуйста,
+                                            введите ваш логин и пароль.
+                                        </p>
 
 
                                     </div>
